// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metaverse pinion-extension: pinion-js new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/pinion-js/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: [object Object] 1`] = `
Object {
  "actions": Array [],
  "success": false,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: add-unless-exists new --message foo 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/add-unless-exists/foo/always.txt",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "added",
      "subject": "given/add-unless-exists/foo/always.txt",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "skipped",
      "subject": "given/add-unless-exists/foo/always.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: attrs-in-body new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/attrs-in-body/hello.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: cli-prefill-prompt-vars falsy-values-are-ok foobar --include_something false 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/cli-prefill-prompt-vars/falsy.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: cli-prefill-prompt-vars name-is-special foobar 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/cli-prefill-prompt-vars/name-is-special.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: cli-prefill-prompt-vars new --message-from-cli hello-from-cli 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/cli-prefill-prompt-vars/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: conditional-rendering new --notGiven 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/conditional/always.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: existing-params new --email premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/existing-params/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: existing-params new-params-alias --email premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/existing-params/new-params-alias.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: index-js-existing-params new --email premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/index-js-existing-params/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: index-js-existing-params new-params-alias --email premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/index-js-existing-params/new-params-alias.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: inflection new --name person 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/my_app/people.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: init self 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/_templates/sample/new/hello.ejs.t",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: mailer new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/app/mailers/message.js",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "added",
      "subject": "given/app/mailers/foo/html.ejs",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "added",
      "subject": "given/app/mailers/foo/subject.ejs",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "added",
      "subject": "given/app/mailers/foo/text.ejs",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "inject",
      "subject": "given/app/mailers/foo/html.ejs",
      "timing": -1,
      "type": "inject",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: overwrite-no base 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/overwrite-no/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: overwrite-yes base 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/overwrite-yes/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: overwrite-yes over 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/overwrite-yes/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: positional-name new acmecorp 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/positional-name/acmecorp/always.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: recursive-prompt new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/recursive-prompt/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse pinion-templates: worker new --name foo 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/app/workers/foo.js",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;
